--- a/pools_specific_EDA/Open River/Open River Analysis.ipynb
+++ b/pools_specific_EDA/Open River/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "little-excess",
+   "id": "psychological-hudson",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "surface-lender",
+   "execution_count": 1,
+   "id": "boring-patent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-builder",
+   "id": "professional-consciousness",
    "metadata": {},
    "source": [
     "Below cells are for debugging purposes"
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "interior-bankruptcy",
+   "id": "analyzed-jacksonville",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "expressed-amount",
+   "id": "infrared-words",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "caroline-controversy",
+   "id": "confident-refrigerator",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "associate-midwest",
+   "id": "portable-pottery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "chinese-watershed",
+   "id": "silver-biodiversity",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quarterly-adelaide",
+   "id": "marked-credit",
    "metadata": {},
    "source": [
     "Now change the variable"
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "liquid-corrections",
+   "id": "conscious-trailer",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "coordinate-fighter",
+   "id": "organizational-advertiser",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "beautiful-backup",
+   "id": "appropriate-graph",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "recognized-contents",
+   "id": "asian-coverage",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "married-framework",
+   "id": "brazilian-operator",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "dangerous-bolivia",
+   "id": "humanitarian-rolling",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classical-mercury",
+   "id": "boring-volume",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -1220,8 +1220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "grand-disaster",
+   "execution_count": 3,
+   "id": "regulated-principle",
    "metadata": {
     "scrolled": true
    },
@@ -1258,7 +1258,7 @@
       "(82481, 21)\n",
       "Filtering by pool\n",
       "(0, 76)\n",
-      "(12684, 21)\n"
+      "(14200, 21)\n"
      ]
     }
    ],
@@ -1287,9 +1287,10 @@
     "print(water_data.columns)\n",
     "print(water_data.shape)\n",
     "\n",
+    "# Open river is FLDNUM 5\n",
     "print(\"Filtering by pool\")\n",
     "veg_data = veg_data[veg_data[\"FLDNUM\"]==5].reset_index(drop=True)\n",
-    "water_data = water_data[water_data[\"FLDNUM\"]==6].reset_index(drop=True)\n",
+    "water_data = water_data[water_data[\"FLDNUM\"]==5].reset_index(drop=True)\n",
     "print(veg_data.shape)\n",
     "print(water_data.shape)"
    ]
@@ -1297,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "civil-artwork",
+   "id": "terminal-corps",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "theoretical-reason",
+   "id": "indirect-diagram",
    "metadata": {},
    "source": [
     "Checking negative values"
@@ -1512,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "special-spectacular",
+   "id": "extreme-amsterdam",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raised-founder",
+   "id": "finite-crack",
    "metadata": {},
    "source": [
     "Checking for weird location codes"
@@ -1552,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "distant-publication",
+   "id": "buried-criminal",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrative-friendship",
+   "id": "developmental-night",
    "metadata": {},
    "source": [
     "Insanity check for time seasons"
@@ -1583,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "hybrid-sydney",
+   "id": "thick-newfoundland",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-booking",
+   "id": "distinguished-peeing",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -1612,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "described-measure",
+   "id": "frozen-bacteria",
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1634,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "expensive-server",
+   "id": "protecting-administration",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "immediate-uzbekistan",
+   "id": "limited-personality",
    "metadata": {
     "scrolled": true
    },
@@ -1726,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "young-tennis",
+   "id": "duplicate-stream",
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "shaped-acrylic",
+   "id": "close-lending",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -1755,7 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "southwest-montana",
+   "id": "sustainable-tracy",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virgin-proceeding",
+   "id": "apparent-landscape",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -1961,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "judicial-feedback",
+   "id": "respective-agreement",
    "metadata": {
     "scrolled": true
    },
@@ -1990,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "wired-coupon",
+   "id": "identified-lotus",
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-injury",
+   "id": "increasing-costume",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -2031,8 +2032,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "greek-click",
+   "execution_count": 4,
+   "id": "productive-feeling",
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2053,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,8 +2063,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ambient-dylan",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6892253521126761"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"VEL\"].isnull().sum()/water_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "accepted-apparatus",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6019014084507043"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"TN\"].isnull().sum()/water_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "loaded-champagne",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6135915492957746"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"TP\"].isnull().sum()/water_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "private-apartment",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06654929577464788"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"SECCHI\"].isnull().sum()/water_data.shape[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "cubic-ecuador",
+   "id": "explicit-adaptation",
    "metadata": {},
    "source": [
     "How much data is TDA ready?"
@@ -2072,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "unlikely-charleston",
+   "id": "seasonal-nerve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2082,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "typical-complexity",
+   "id": "enhanced-trick",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "regional-pickup",
+   "id": "editorial-thanksgiving",
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metallic-livestock",
+   "id": "illegal-miniature",
    "metadata": {},
    "source": [
     "#### Interpolating missing data (by year, by timecode)"
@@ -2145,7 +2230,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "advanced-theta",
+   "id": "human-samba",
    "metadata": {
     "scrolled": true
    },
@@ -2170,7 +2255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coral-current",
+   "id": "attractive-intellectual",
    "metadata": {},
    "source": [
     "Look at the interpolated dataset"
@@ -2179,7 +2264,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "intermediate-bangkok",
+   "id": "legal-peripheral",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2517,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "statutory-toddler",
+   "id": "asian-slope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "normal-tissue",
+   "id": "running-strain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-trinity",
+   "id": "refined-devon",
    "metadata": {},
    "source": [
     "Now see how many rows we gained after interpolation"
@@ -2460,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "controlled-advocate",
+   "id": "pending-brunswick",
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atlantic-portfolio",
+   "id": "faced-humidity",
    "metadata": {},
    "source": [
     "#### Checking how good we did with prediction on each variable, first we need to filter the data based off values we already have"
@@ -2492,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "productive-registration",
+   "id": "objective-enterprise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "informational-alpha",
+   "id": "threatened-frederick",
    "metadata": {},
    "outputs": [
     {
@@ -2792,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "looking-parameter",
+   "id": "fallen-industry",
    "metadata": {},
    "outputs": [
     {
@@ -3080,7 +3165,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "promising-school",
+   "id": "annual-centre",
    "metadata": {},
    "outputs": [
     {
@@ -3149,7 +3234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bound-killer",
+   "id": "seasonal-organizer",
    "metadata": {},
    "source": [
     "Looking at accuracy of TN"
@@ -3158,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "bulgarian-france",
+   "id": "other-paintball",
    "metadata": {
     "scrolled": true
    },
@@ -3881,7 +3966,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "threaded-primary",
+   "id": "sought-pension",
    "metadata": {},
    "outputs": [
     {
@@ -3924,7 +4009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-waterproof",
+   "id": "grand-sense",
    "metadata": {},
    "source": [
     "Looking at accuracy of TP"
@@ -3933,7 +4018,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "behind-insight",
+   "id": "sharing-porter",
    "metadata": {
     "scrolled": true
    },
@@ -4658,7 +4743,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "innovative-april",
+   "id": "superior-conservative",
    "metadata": {},
    "outputs": [
     {
@@ -4701,7 +4786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conceptual-algeria",
+   "id": "manufactured-kingdom",
    "metadata": {},
    "source": [
     "Looking at accuracy of VEL"
@@ -4710,7 +4795,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "inclusive-secretariat",
+   "id": "reflected-latvia",
    "metadata": {
     "scrolled": true
    },
@@ -5045,7 +5130,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "intermediate-disposal",
+   "id": "organized-negotiation",
    "metadata": {},
    "outputs": [
     {
@@ -5088,7 +5173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sustainable-president",
+   "id": "significant-shaft",
    "metadata": {},
    "source": [
     "### Multivariate Regression Attempt on Open River"
@@ -5096,7 +5181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "local-bhutan",
+   "id": "invalid-rebate",
    "metadata": {},
    "source": [
     "Filter for non missing data"
@@ -5105,7 +5190,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "mechanical-nothing",
+   "id": "experimental-format",
    "metadata": {},
    "outputs": [
     {
@@ -5132,7 +5217,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "allied-tourism",
+   "id": "comic-dollar",
    "metadata": {},
    "outputs": [
     {
@@ -5214,7 +5299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quiet-imagination",
+   "id": "interim-thesaurus",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5222,7 +5307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thorough-attention",
+   "id": "essential-chain",
    "metadata": {},
    "outputs": [],
    "source": []
