--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "pediatric-mileage",
+   "id": "advised-collins",
    "metadata": {},
    "source": [
     "### Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "other-german",
+   "execution_count": 1,
+   "id": "exciting-stake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-trail",
+   "id": "blocked-integrity",
    "metadata": {},
    "source": [
     "### Functions"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "individual-touch",
+   "id": "polish-circulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,16 +199,91 @@
   },
   {
    "cell_type": "markdown",
-   "id": "middle-devon",
+   "id": "imposed-nevada",
    "metadata": {},
    "source": [
     "### Load data"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adjustable-huntington",
+   "metadata": {},
+   "source": [
+    "Run this cell to use Ambers Random Forrest interpolated dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "significant-irish",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['SHEETBAR', 'DATE', 'LATITUDE', 'LONGITUDE', 'FLDNUM', 'STRATUM',\n",
+      "       'LOCATCD', 'TN', 'TP', 'TEMP', 'DO', 'TURB', 'COND', 'VEL', 'SS', 'WDP',\n",
+      "       'CHLcal', 'SECCHI', 'YEAR', 'SEASON'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(14200, 20)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "continuous = ['TN','TP','TEMP','DO','TURB','COND','VEL','SS','WDP','CHLcal','SECCHI']\n",
+    "nocond = ['TN','TP','TEMP','DO','TURB','VEL','SS','WDP','CHLcal','SECCHI']\n",
+    "\n",
+    "predicted_df = pd.read_csv(r\"..\\..\\LTRM data\\RF interpolation\\water_combinedcols.csv\")\n",
+    "predicted_df = predicted_df[predicted_df[\"FLDNUM\"]==\"Jackson, MO\"].reset_index(drop=True)\n",
+    "print(predicted_df.columns)\n",
+    "predicted_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "stretch-conspiracy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12446, 20)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_df.dropna(axis=0, how='any', thresh=None, subset=nocond, inplace=True)\n",
+    "predicted_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "annual-taylor",
+   "metadata": {},
+   "source": [
+    "Run this cell to use the IDW by year by season interpolated dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "democratic-logistics",
+   "id": "affecting-intensity",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "toxic-dryer",
+   "id": "critical-racing",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "professional-virus",
+   "id": "induced-colleague",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "failing-country",
+   "id": "complex-permit",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "brazilian-expression",
+   "id": "dirty-scotland",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "grateful-warner",
+   "id": "improved-strength",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "saving-introduction",
+   "id": "imperial-stand",
    "metadata": {},
    "source": [
     "Saving all outputs to json save scomplices and data"
@@ -790,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "confused-portal",
+   "id": "completed-damage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "increasing-coffee",
+   "id": "complete-powell",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -813,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "public-indonesian",
+   "id": "modular-pointer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "handmade-sullivan",
+   "id": "digital-foundation",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-interval",
+   "id": "domestic-particular",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -855,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "narrow-delhi",
+   "id": "white-kernel",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hawaiian-karen",
+   "id": "desperate-necessity",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -895,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "specialized-observer",
+   "id": "developmental-montana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "orange-hebrew",
+   "id": "packed-smell",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "brown-carry",
+   "id": "outdoor-terrorist",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protecting-shore",
+   "id": "cognitive-colleague",
    "metadata": {},
    "outputs": [],
    "source": []
